# Calibrate

./: .gitignore  Cargo.toml  LEARNING.md  README.md
.github/workflows/: ci.yml
assets/: fallback_specs.json
src/: cli.rs  error.rs  main.rs
src/analysis/: bottleneck.rs  mod.rs  recommendations.rs
src/bench/: compare.rs  harness.rs  input.rs  memory.rs  mod.rs  runtime.rs  stats.rs
src/bench/runtimes/: candle.rs  llamacpp.rs  metal.rs  mod.rs  onnxruntime.rs  tensorrt.rs  torchscript.rs
src/collectors/: apple_gpu.rs  cpu_only.rs  mod.rs  nvml.rs  proc.rs
src/commands/: bench.rs  mod.rs  plan.rs  probe.rs  watch.rs
src/gpu_specs/: client.rs  fallback.rs  mod.rs
src/metrics/: breakdown.rs  mfu.rs  mod.rs  units.rs  window.rs
src/output/: bench_markdown.rs  bench_terminal.rs  json.rs  mod.rs  plan_json.rs  plan_terminal.rs  summary.rs  terminal.rs
src/plan/: mod.rs
src/plan/duration/: estimator.rs
src/plan/model/: mod.rs  resolver.rs
src/plan/providers/: lambda.rs  mod.rs  runpod.rs  vastai.rs
src/plan/vram/: estimator.rs
src/process/: attach.rs  container.rs  mod.rs
src/session/: lifecycle.rs  mod.rs  state.rs
