[package]
name = "calibrate"
version = "0.1.0"
edition = "2021"
authors = ["Prajwal Amte <prajwal@example.com>"]
description = "GPU training efficiency analyzer — real-time MFU, bottleneck detection, and actionable recommendations for NVIDIA GPU workloads"
license = "MIT"
repository = "https://github.com/PrajwalAmte/Calibrate"
homepage = "https://github.com/PrajwalAmte/Calibrate"
documentation = "https://github.com/PrajwalAmte/Calibrate#readme"
keywords = ["gpu", "mfu", "deep-learning", "nvml", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling"]
readme = "README.md"
rust-version = "1.75"
exclude = [
    ".github/",
    "*.md.bak",
]

[[bin]]
name = "calibrate"
path = "src/main.rs"

[dependencies]
# NVML bindings
nvml-wrapper = "0.10"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for GPU spec DB (blocking; called once at startup)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# MPSC channel bridging std::thread → tokio
flume = "0.11"

# Structured diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Faster RwLock / Mutex
parking_lot = "0.12"

# High-dynamic-range histogram for step-time percentiles
hdrhistogram = "7"

# XDG cache directory (~/.cache/calibrate/)
directories = "5"

# Linux /proc parsing
libc = "0.2"

# Fixed random input generation for bench
rand = { version = "0.8", features = ["small_rng"] }

# Timestamps in BenchReport (comparison over time)
chrono = { version = "0.4", features = ["serde"] }

# Temporary files for subprocess driver scripts (bench)
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
